# story-generator-ai

./: README.md
gerador-de-histórias-ai/: main.py  pyproject.toml  requirements.txt
gerador-de-histórias-ai/projeto/: main.py  requirements.toml
gerador-de-histórias-ai/projeto/static/css/: style.css
gerador-de-histórias-ai/projeto/static/js/: script.js
gerador-de-histórias-ai/projeto/templates/: index.html
gerador-de-histórias-ai/templates/: index.html
