[project]
name = "story-generator"
version = "0.1.0"
description = "Gerador de histórias com IA do Google"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.2",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
]

[tool.uv]
dev-dependencies = []